; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/comedi/drivers/extr_comedi_8255.c_subdev_8255_mm_init.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/comedi/drivers/extr_comedi_8255.c_subdev_8255_mm_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.comedi_device = type { i32 }
%struct.comedi_subdevice = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @subdev_8255_mm_init(%struct.comedi_device* %0, %struct.comedi_subdevice* %1, i32 (%struct.comedi_device*, i32, i32, i32, i64)* %2, i64 %3) #0 {
  %5 = alloca %struct.comedi_device*, align 8
  %6 = alloca %struct.comedi_subdevice*, align 8
  %7 = alloca i32 (%struct.comedi_device*, i32, i32, i32, i64)*, align 8
  %8 = alloca i64, align 8
  store %struct.comedi_device* %0, %struct.comedi_device** %5, align 8
  store %struct.comedi_subdevice* %1, %struct.comedi_subdevice** %6, align 8
  store i32 (%struct.comedi_device*, i32, i32, i32, i64)* %2, i32 (%struct.comedi_device*, i32, i32, i32, i64)** %7, align 8
  store i64 %3, i64* %8, align 8
  %9 = load %struct.comedi_device*, %struct.comedi_device** %5, align 8
  %10 = load %struct.comedi_subdevice*, %struct.comedi_subdevice** %6, align 8
  %11 = load i32 (%struct.comedi_device*, i32, i32, i32, i64)*, i32 (%struct.comedi_device*, i32, i32, i32, i64)** %7, align 8
  %12 = load i64, i64* %8, align 8
  %13 = call i32 @__subdev_8255_init(%struct.comedi_device* %9, %struct.comedi_subdevice* %10, i32 (%struct.comedi_device*, i32, i32, i32, i64)* %11, i64 %12, i32 1)
  ret i32 %13
}

declare dso_local i32 @__subdev_8255_init(%struct.comedi_device*, %struct.comedi_subdevice*, i32 (%struct.comedi_device*, i32, i32, i32, i64)*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
